--- a/index.html
+++ b/index.html
@@ -235,6 +235,24 @@
         </div>
     </div>
 
+    <div id="debug-overlay"
+        style="display: none; position: fixed; bottom: 0; left: 0; right: 0; height: 150px; background: rgba(0,0,0,0.85); color: #0f0; font-family: monospace; font-size: 10px; overflow-y: auto; z-index: 9999; padding: 5px; border-top: 1px solid #333;">
+        <div
+            style="position: sticky; top: 0; background: #000; padding: 2px; border-bottom: 1px solid #333; display: flex; justify-content: space-between;">
+            <span>Debug Log</span>
+            <button id="clear-debug"
+                style="background: #333; color: white; border: none; padding: 2px 5px;">Clear</button>
+            <button id="close-debug"
+                style="background: #333; color: white; border: none; padding: 2px 5px;">Close</button>
+        </div>
+        <div id="debug-content"></div>
+    </div>
+
+    <button id="toggle-debug"
+        style="position: fixed; bottom: 5px; right: 5px; opacity: 0.3; z-index: 9998; font-size: 10px; padding: 2px; background: black; color: white;">
+        DBG
+    </button>
+
     <script src="script.js"></script>
     <script>
         lucide.createIcons();
