--- a/index.html
+++ b/index.html
@@ -164,6 +164,14 @@
                         <i data-lucide="x" style="width: 18px; height: 18px;"></i>
                     </button>
                 </div>
+                <!-- Add File Button -->
+                <div style="margin-bottom: 1rem;">
+                    <button id="add-file-btn" class="btn-sm"
+                        style="display: inline-flex; align-items: center; gap: 0.5rem;">
+                        <i data-lucide="plus-circle" style="width: 16px; height: 16px;"></i> PDFを追加
+                    </button>
+                    <input type="file" id="add-file-input" accept="application/pdf" style="display: none;">
+                </div>
 
                 <div id="processing-ui">
                     <p id="status-text"
